@@ -40,7 +40,7 @@ constexpr RideTypeDescriptor RiverRapidsRTD =
     .AvailableBreakdowns = (1 << BREAKDOWN_SAFETY_CUT_OUT) | (1 << BREAKDOWN_CONTROL_FAILURE),
     .Heights = { 9, 32, 14, 15, },
     .MaxMass = 255,
-    .LiftData = { OpenRCT2::Audio::SoundId::Null, 5, 5 },
+    .LiftData = { OpenRCT2::Audio::SoundId::LiftFlume, 5, 5 },
     .RatingsMultipliers = { 72, 26, 6 },
     .UpkeepCosts = { 82, 20, 0, 10, 0, 10 },
     .BuildCosts = { 31.00_GBP, 3.00_GBP, 40, },
